--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -25,7 +25,8 @@ main {
         max-width:200px;
         width:100%;
         text-align: center;
-        &:hover{
+        &:hover,
+        &:focus {
             background:white;
             color:$button;
         }
